# tracey

./: .gitignore  Cargo.toml  LSP_IS_A_HAMMER.md  README.md  dist-workspace.toml
.config/captain/: config.yaml
.config/tracey/: config.kdl
.github/workflows/: ci.yml
crates/tracey/: Cargo.toml  build.rs
crates/tracey-core/: Cargo.toml
crates/tracey-core/src/: code_units.rs  coverage.rs  markdown.rs  sources.rs  spec.rs
crates/tracey-core/tests/: markdown_integration.rs
crates/tracey-proto/src/: lib.rs
crates/tracey/dashboard/src/: main.tsx  router.ts  style.css
crates/tracey/dashboard/src/components/: InlineEditor.tsx
crates/tracey/dashboard/src/views/: spec.tsx
crates/tracey/src/: config.rs  data.rs  errors.rs  lib.rs  lsp.rs  main.rs  mcp.rs  output.rs  serve.rs  server.rs
crates/tracey/src/bridge/: lsp.rs  mcp.rs
crates/tracey/src/bridge/http/: mod.rs
crates/tracey/src/bridge/http/dashboard/src/: main.tsx
crates/tracey/src/daemon/: client.rs  engine.rs  mod.rs  service.rs  watcher.rs
crates/tracey/tests/: cli_integration.rs  integration_tests.rs  lsp_diagnostic_lifecycle_tests.rs  mcp_tests.rs  watcher_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/spec/: tracey.md
src/: config.rs  coverage.rs  lexer.rs  main.rs  scanner.rs  spec.rs
tracey-zed/src/: lib.rs
