[package]
name = "tracey"
version = "0.1.0"
edition = "2024"
description = "CLI tool to measure spec coverage in Rust codebases"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tracey"

[dependencies]
# Facet ecosystem for config parsing and CLI
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-kdl = { git = "https://github.com/facet-rs/facet", branch = "main" }

# Error handling
color-eyre = "0.6"
eyre = "0.6"

# Async runtime for HTTP fetching
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# JSON for parsing _rules.json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File walking
walkdir = "2"

# Pretty output
owo-colors = "4"
