[package]
name = "tracey"
version = "0.5.0"
description = "CLI tool to measure spec coverage in Rust codebases"
keywords = ["specification", "coverage", "traceability", "testing", "documentation"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
tracey-core = { workspace = true, features = ["walk", "parallel", "fetch", "markdown"] }

# Facet ecosystem for config parsing and CLI
facet = { workspace = true }
facet-args = { workspace = true }
facet-kdl = { workspace = true }
facet-json = { workspace = true }

# Error handling
eyre = { workspace = true }
miette = { workspace = true }
facet-error = { workspace = true }

# Pretty output
owo-colors = { workspace = true }

# File walking (for rules_glob)
ignore = { workspace = true }

# Syntax highlighting for miette
miette-arborium = { workspace = true }
